JgMaschineServiceArbeitszeit/Datafox_SDK_Windows_04.03.09/Kommunikationsmodul DFComDLL 04.03.09/DLL/DFComSLink.h


EXTERN_DECL int __stdcall DFCComOpenIV(int iChannelNum, int iBusNum, int iType, char *szComString, int iComValue, int iComTimeOut);
EXTERN_DECL void __stdcall DFCComClose(int iChannelNum);
EXTERN_DECL int __stdcall DFCCheckAE(int iChannelNum, int iBusNum);
EXTERN_DECL int __stdcall DFCCheckDevice(int iChannelNum, int iBusNum, int *piError, int iDevicePollRetry);
EXTERN_DECL int __stdcall DFCComSetTime(int iChannelNum, int iBusNum, unsigned char *pucDateTime);
EXTERN_DECL int __stdcall DFCComGetTime(int iChannelNum, int iBusNum, unsigned char *pucDateTime);
EXTERN_DECL int __stdcall DFCComSendMessage(int iChannelNum, int iBusNum, unsigned char ucDelayTime, unsigned char ucAction, unsigned char ucAudio, char *szMessage, int iLength);
EXTERN_DECL int __stdcall DFCComSendInfotext(int iChannelNum, int iBusNum, char *szMessage,int iLength);
EXTERN_DECL int __stdcall DFCGetSeriennummer(int iChannelNum, int iBusNum, int *piError, int *piSerialNum);
EXTERN_DECL void __stdcall DFCSetLogOn(int iChannelNum);
EXTERN_DECL void __stdcall DFCSetLogOff(int iChannelNum);
EXTERN_DECL void __stdcall DFCSetCallBack(int iChannelNum, int (*CBFunction)(void));
EXTERN_DECL void __stdcall DFCSetLogFileName(int iChannelNum, const unsigned char *szLogFileName);
EXTERN_DECL void __stdcall DFCGetErrorText(int iChannelNum, int iError, int iLanguage, char *szText, int iLength);
EXTERN_DECL int __stdcall DFCSetGlobVar(int iChannelNum, int iBusNum, unsigned char *pucVar, int iType, unsigned char *pucValue, int *piError);
EXTERN_DECL int __stdcall DFCGetGlobVar(int iChannelNum, int iBusNum, unsigned char *pucVar, int iType, unsigned char *pucValue, int iValueLength, int *piError);
EXTERN_DECL int __stdcall DFCCloseRelay(int iChannelNum, int iBusNum, int iNum, int iTime, int *piError);
EXTERN_DECL int __stdcall DFCGetRelayState(int iChannelNum, int iBusNum, int iNum, int *piState, int *piTime, int *piError);
EXTERN_DECL int __stdcall DFCOpenRelay(int iChannelNum, int iBusNum, int iNum, int *piError);
EXTERN_DECL int __stdcall DFCGetDevicePollRetry(int iChannelNum);
EXTERN_DECL HANDLE __stdcall DFCGetComPort(int iChannelNum);
EXTERN_DECL int __stdcall DFCSetComPort(int iChannelNum, HANDLE hComPort, int bPortIsSocket, int iBaudRate, int iTimeOut);
EXTERN_DECL int __stdcall DFCWrite(int iChannelNum, char *pBuf, int iLength, int *piWriteLength, int *piError);
EXTERN_DECL int __stdcall DFCRead(int iChannelNum, char *pBuf, int iLength, int *piReadLength, int *piError);
EXTERN_DECL int __stdcall DFCUpload(int iChannelNum, int iBusNum, char *szFileName, int *piError);
EXTERN_DECL int __stdcall DFCGetVersionFirmware(int iChannelNum, int iBusNum, char *szVersion, int *piError);
EXTERN_DECL int __stdcall DFCGetVersionFirmwareFromFile(int iChannelNum, char *szFileName, char *szVersion, int *piError);
EXTERN_DECL int __stdcall DFCGetInfo(int channelID, int deviceID, char *name, char *params, char *info, int *len, int *piError);
EXTERN_DECL int __stdcall DFCOpenComServerMode(int channelID, int deviceID, char *comm, int baudRate, int byteSize, int parity, int stopBits, int flags, int timeoutToClose, int *error);
EXTERN_DECL int __stdcall DFCCloseComServerMode(int channelID, int deviceID, int *error);
EXTERN_DECL int __stdcall DFCIsChannelOpen(int channelID);
EXTERN_DECL int __stdcall DFCSetOptionFirmware(int channelID, int deviceID, int mask, int options, int *piError);
EXTERN_DECL int __stdcall DFCGetOptionFirmware(int channelID, int deviceID, int *mask, int *options, int *piError);
EXTERN_DECL int __stdcall DFCReset(int channelID, int deviceID, int mode, int *error);
EXTERN_DECL int __stdcall DFCSetFontType(int channelID, int deviceID, int iType, int *error);
EXTERN_DECL int __stdcall DFCSetPassword(int channelID, char *password, int *piError);
EXTERN_DECL int __stdcall DFCGetPasswordKey(int channelID, int deviceID, char *key, int *len, int *piError);
EXTERN_DECL int __stdcall DFCPressVirtualKey(int channelID, int deviceID, int virtualKey, int flags, int *piError);
EXTERN_DECL int __stdcall DFCGetFlashStatus(int channelID, int deviceID, int *status, int *piError);
EXTERN_DECL int __stdcall DFCSetupLaden(int iChannelNum,int iBusNum, char *szFileName, int *piError);
EXTERN_DECL int __stdcall DFCDownload(int iChannelNum,int iBusNum, char *szFileName, int *piError);
EXTERN_DECL int __stdcall DFCModifyStudioFile(char *sourceFile, char *destFile, char *changeData, int flags, int *piError);
 EXTERN_DECL int __stdcall DFCOpenTable(int channelID, int deviceID, char *name, int options, int *handle, char *reserved, int *piError);
 EXTERN_DECL int __stdcall DFCCloseTable(int channelID, int deviceID, int handle, int *piError);
 EXTERN_DECL int __stdcall DFCSetFilter(int channelID, int deviceID, int handle, char *filter, int *piError);
 EXTERN_DECL int __stdcall DFCGetFilter(int channelID, int deviceID, int handle, char *filter, int *len, int *piError);
 EXTERN_DECL int __stdcall DFCClearFilter(int channelID, int deviceID, int handle, int *piError);
 EXTERN_DECL int __stdcall DFCSkip(int channelID, int deviceID, int handle, int offset, int origin, int *piError);
 EXTERN_DECL int __stdcall DFCSetField(int channelID, int deviceID, int handle, char *name, char *value, int *piError);
 EXTERN_DECL int __stdcall DFCGetField(int channelID, int deviceID, int handle, char *name, char *value, int *len, int *piError);
EXTERN_DECL int __stdcall DFCComClearData(int iChannelNum, int iBusNum);
EXTERN_DECL int __stdcall DFCLoadDatensatzbeschreibung(int iChannelNum, int iBusNum, int *piError);
EXTERN_DECL int __stdcall DFCDatBCnt(int iChannelNum);
EXTERN_DECL int __stdcall DFCDatBDatensatz(int iChannelNum, int iDataNum, unsigned char *szName, int *piFieldCount);
EXTERN_DECL int __stdcall DFCDatBFeld(int iChannelNum, int iDataNum, int iField, unsigned char *szName, int *piType, int *piLength);
 EXTERN_DECL int __stdcall DFCReadRecord(int channelID, int deviceID, char *buf, int *length, int *err);
 EXTERN_DECL int __stdcall DFCQuitRecord(int channelID, int deviceID, int *err);
 EXTERN_DECL int __stdcall DFCRestoreRecords(int channelID, int deviceID, int *piError);
EXTERN_DECL int __stdcall DFCMakeListe(int iChannelNum, int iListNum, int iLineCount, int iListSize, unsigned char *pucBuf, int iListMemSizeNum);
EXTERN_DECL int __stdcall DFCLoadListen(int iChannelNum, int iBusNum, int *piError);
EXTERN_DECL void __stdcall DFCClrListenBuffer(int iChannelNum);
EXTERN_DECL int __stdcall DFCLoadListenbeschreibung(int iChannelNum, int iBusNum, int *piError);
EXTERN_DECL int __stdcall DFCListBCnt(int iChannelNum);
EXTERN_DECL int __stdcall DFCListBDatensatz(int iChannelNum, int iDataNum, unsigned char *szName, int *piFieldCount, int *piVar);
EXTERN_DECL int __stdcall DFCListBFeld(int iChannelNum, int iDataNum, int iField, unsigned char *szName, int *piType, int *piLength);
EXTERN_DECL int __stdcall DFCMakeEntrance2List(int iChannelNum, int iListNum, int iLineCount, int iListSize, unsigned char *pucBuf, int *piError);
EXTERN_DECL int __stdcall DFCLoadEntrance2List(int iChannelNum, int iBusNum, int iListNum, int *piError);
EXTERN_DECL void __stdcall DFCClearEntrance2ListBuffer(int iChannelNum, int iListNum);
EXTERN_DECL int __stdcall DFCEntrance2Identification(int channelID, int deviceID, char *TM, char *Id, char *Pin, char *status, int *len, int *piError);
EXTERN_DECL int __stdcall DFCEntrance2OnlineAction(int channelID, int deviceID, char *TM, int mask, int type, int duration, int *piError);