JgMaschineServiceArbeitszeit/DatafoxDll.cs

using System;
using System.IO;
using System.Runtime.InteropServices;
using System.Text;
using System.Xml;
using System.Xml.Serialization;

namespace JgMaschineServiceArbeitszeit
{
  public delegate int CBFunction();
  public static class DFComDLL
    {
    [DllImport("DFComDLL.dll")]
    public static extern int DFCComOpenIV(int channelID, int deviceID, int commType, string commString, int commValue, int commTimeout);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCComClose(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCCheckAE(int channelID, int deviceID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCCheckDevice(int channelID, int deviceID, out int errorID, int iDevicePollRetry);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCComSetTime(int channelID, int deviceID, byte[] pucDateTime);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCComGetTime(int channelID, int deviceID, [MarshalAs(UnmanagedType.LPArray)] byte[] pucDateTime);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCComSendMessage(int channelID, int deviceID, byte ucDelayTime, byte ucAction, byte ucAudio, string szMessage, int iLength);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCComSendInfotext(int channelID, int deviceID, string szMessage, int iLength);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetSeriennummer(int channelID, int deviceID, out int errorID, out int serial);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCSetLogOn(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCSetLogOff(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCSetCallBack(int channelID, CBFunction func);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCSetLogFileName(int channelID, string szLogFileName);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCGetErrorText(int channelID, int errorID, int iLanguage, StringBuilder szText, int iLength);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetGlobVar(int channelID, int deviceID, string gvName, int typeGV, string valueGV, out int errorID);
    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetGlobVar(int channelID, int deviceID, [MarshalAs(UnmanagedType.LPArray)] byte[] gvIndex, int typeGV, string valueGV, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetGlobVar(int channelID, int deviceID, string gvName, int typeGV, StringBuilder valueGV, int valueLength, out int errorID);
    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetGlobVar(int channelID, int deviceID, [MarshalAs(UnmanagedType.LPArray)] byte[] gvIndex, int typeGV, StringBuilder valueGV, int valueLength, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCCloseRelay(int channelID, int deviceID, int iNum, int iTime, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetRelayState(int channelID, int deviceID, int iNum, out int piState, out int piTime, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCOpenRelay(int channelID, int deviceID, int iNum, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetDevicePollRetry(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern IntPtr DFCGetComPort(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetComPort(int channelID, IntPtr hComPort, int bPortIsSocket, int iBaudRate, int iTimeOut);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCWrite(int channelID, string Buf, int lengthBuf, out int lengthWrite, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCRead(int channelID, StringBuilder Buf, int lengthBuf, out int lengthRead, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCUpload(int channelID, int deviceID, string szFileName, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetVersionFirmware(int channelID, int deviceID, StringBuilder szVersion, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetVersionFirmwareFromFile(int channelID, string fileName, StringBuilder szVersion, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetInfo(int channelID, int deviceID, string name, string parameters, StringBuilder info, out int len, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCOpenComServerMode(int channelID, int deviceID, string comm, int baudRate, int byteSize, int parity, int stopBits, int flags, int timeoutToClose, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCCloseComServerMode(int channelID, int deviceID, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCIsChannelOpen(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetOptionFirmware(int channelID, int deviceID, int mask, int options, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetOptionFirmware(int channelID, int deviceID, out int mask, out int options, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCReset(int channelID, int deviceID, int mode, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetFontType(int channelID, int deviceID, int iType, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetPassword(int channelID, string password, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetPasswordKey(int channelID, int deviceID, StringBuilder key, out int len, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCPressVirtualKey(int channelID, int deviceID, int virtualKey, int flags, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetFlashStatus(int channelID, int deviceID, out int status, out int errorID);

    // ########################################################
    // ############## FUNKTIONEN FUER SETUP ###################
    // ########################################################

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetupLaden(int channelID, int deviceID, string fileName, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCDownload(int channelID, int deviceID, string fileName, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCModifyStudioFile(string sourceFile, string destFile, string changeData, int flags, out int errorID);


    // ###############################################################
    // ######### FUNKTIONEN FÜR LISTEN, SOWIE ZUTRITTSLISTEN #########
    // ###############################################################

    [DllImport("DFComDLL.dll")]
    public static extern int DFCOpenTable(int channelID, int deviceID, string name, int options, out int handle, string reserved, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCCloseTable(int channelID, int deviceID, int handle, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetFilter(int channelID, int deviceID, int handle, string filter, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetFilter(int channelID, int deviceID, int handle, StringBuilder filter, out int len, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCClearFilter(int channelID, int deviceID, int handle, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSkip(int channelID, int deviceID, int handle, int offset, int origin, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCSetField(int channelID, int deviceID, int handle, string name, string value, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCGetField(int channelID, int deviceID, int handle, string name, StringBuilder value, out int len, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCComClearData(int channelID, int deviceID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCLoadDatensatzbeschreibung(int channelID, int deviceID, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCDatBCnt(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCDatBDatensatz(int channelID, int iDataNum, StringBuilder szName, out int piFieldCount);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCDatBFeld(int channelID, int iDataNum, int iField, StringBuilder szName, out int piType, out int piLength);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCReadRecord(int channelID, int deviceID, [MarshalAs(UnmanagedType.LPArray)] byte[] buf, out int length, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCQuitRecord(int channelID, int deviceID, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCRestoreRecords(int channelID, int deviceID, out int errorID);


    // ########################################################
    // ############## FUNKTIONEN FUER LISTEN ##################
    // ########################################################

    [DllImport("DFComDLL.dll")]
    public static extern int DFCMakeListe(int channelID, int iListNum, int iLineCount, int iListSize, byte[] pucBuf, int iListMemSizeNum);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCLoadListen(int channelID, int deviceID, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCClrListenBuffer(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCLoadListenbeschreibung(int channelID, int deviceID, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCListBCnt(int channelID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCListBDatensatz(int channelID, int iDataNum, StringBuilder szName, out int piFieldCount, out int piVar);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCListBFeld(int channelID, int iDataNum, int iField, StringBuilder szName, out int piType, out int piLength);


    // ########################################################
    // ####### FUNKTIONEN FUER ZUTRITTSKONTROLLLISTEN 2 #######
    // ########################################################

    [DllImport("DFComDLL.dll")]
    public static extern int DFCMakeEntrance2List(int channelID, int iListNum, int iLineCount, int iListSize, byte[] pucBuf, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCLoadEntrance2List(int channelID, int deviceID, int iListNum, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern void DFCClearEntrance2ListBuffer(int channelID, int iListNum);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCEntrance2Identification(int channelID, int deviceID, string TM, string Id, string Pin, StringBuilder status, out int len, out int errorID);

    [DllImport("DFComDLL.dll")]
    public static extern int DFCEntrance2OnlineAction(int channelID, int deviceID, string TM, int mask, int type, int duration, out int errorID);


    // ########################################################
    // ########### FUNKTIONEN FUER FINGERPRINT ################
    // ########################################################

